--- a/html/style.css
+++ b/html/style.css
@@ -15,8 +15,10 @@ body{
 }
 
 .mini__logo{
-    width: 38px;
-    height: 24px;
+    width: 30px;
+    height: 30px;
+	margin-right: 10px;
+	margin-top: 10px;
 }
 
 a{
@@ -155,8 +157,9 @@ a.row__poster{
 }
 
 .header__left img{
-    width: 100px;
+    width: 150px;
     margin-left: 15px;
+	margin-top: 10px;
 }
 
 .header i{
@@ -240,6 +243,107 @@ hr{
     border: none;
 }
 
+/* Main page */
+.row__main{
+    color: white;
+    margin-left: 20px;
+}
+
+.platform__description1{
+    width: 45rem;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 0.8rem;
+    max-width: 360px;
+    height:180px;
+}
+
+.platform__description2{
+    width: 45rem;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 0.8rem;
+    max-width: 360px;
+    height:180px;
+}
+
+.main{
+    background-size: cover;
+    background-position: center center;
+    color: white;
+    object-fit: contain;
+    height: 448px;
+}
+
+a.row__logo{
+    width: 100%;
+    object-fit: contain;
+    max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450ms;
+    overflow-y: scroll;
+}
+
+.row__logo{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+
+}
+
+.row__logo{
+    transform: scale(1.08);
+}
+
+.row__logo::-webkit-scrollbar{
+    display: none;
+}
+
+.logo__description{
+    text-align: center;
+    font-size: 2rem;
+    height:200px;
+    line-height: 14;
+}
+
+.platfrom__description1{
+    float: left;
+    width: 50%;
+    text-align: center;
+}
+
+.platfrom__description2{
+    float: right;
+    width: 50%;
+    text-align: center;;
+}
+
+.logo__size1{
+    float: right;
+    width: 45%;
+    width: 400px;
+    width: 300px;
+
+}
+
+.logo__size2{
+    float: left;
+    width: 45%;
+    width: 400px;
+    width: 300px;
+}
+
+.main{
+    text-align: center;
+	padding: 10px;
+}
+
+.below{
+    display: inline-block;
+}
+
+/* Pop */
 .close{
     float: right;
     cursor:pointer;
@@ -276,6 +380,18 @@ hr{
 }
 
 .popepisode{
+    font-family: 'Joan', serif;
+    font-size: 20pt;
+    padding: 0px 10px 15px 0px;
+}
+
+.popshowtime{
+    font-family: 'Joan', serif;
+    font-size: 20pt;
+    padding: 0px 10px 15px 0px;
+}
+
+.popdate{
     font-family: 'Joan', serif;
     font-size: 20pt;
     padding: 0px 10px 15px 0px;
@@ -400,9 +516,6 @@ hr{
     left: 140px;
 }
 
-
-
-/* Watcha */
 /* Watcha */
 #popcsi{
     width:80%;
@@ -736,6 +849,16 @@ hr{
 
 
 /* Tving */
+/* Tving */
+#popourblues{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
 #popliberation{
     width:80%;
     height:80%;
@@ -745,103 +868,391 @@ hr{
     top: 90px;
     left: 140px;
 }
-
-/*main page*/
-.row__main{
-    color: white;
-    margin-left: 20px;
+#popshooting{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popcrush{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popbeauty{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popmelodramatic{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popreply{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#poptwentyfive{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#pophotel{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popsecretary{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popvoice{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popvoice2{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popvoice3{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popvoice4{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popadvent{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
 
-.platform__description1{
-    width: 45rem;
-    line-height: 1.3;
-    padding-top: 1rem;
-    font-size: 0.8rem;
-    max-width: 360px;
-    height:180px;
+#popromance{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.platform__description2{
-    width: 45rem;
-    line-height: 1.3;
-    padding-top: 1rem;
-    font-size: 0.8rem;
-    max-width: 360px;
-    height:180px;
+#popjob{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.main{
-    background-size: cover;
-    background-position: center center;
-    color: white;
-    object-fit: contain;
-    height: 448px;
+#popmurder{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-a.row__logo{
-    width: 100%;
-    object-fit: contain;
-    max-height: 100px;
-    margin-right: 10px;
-    transition: transform 450ms;
-    overflow-y: scroll;
+#poptaxi{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.row__logo{
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    padding: 20px;
-
+#popwedding{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.row__logo{
-    transform: scale(1.08);
+#popwhiplash{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.row__logo::-webkit-scrollbar{
-    display: none;
+#popcrime{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.logo__description{
-    text-align: center;
-    font-size: 2rem;
-    height:200px;
-    line-height: 14;
+#popexit{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.platfrom__description1{
-    float: left;
-    width: 50%;
-    text-align: center;
+#popinception{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.platfrom__description2{
-    float: right;
-    width: 50%;
-    text-align: center;;
+#popparasite{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.logo__size1{
-    float: right;
-    width: 45%;
-    width: 400px;
-    width: 300px;
-
+#popevil{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.logo__size2{
-    float: left;
-    width: 45%;
-    width: 400px;
-    width: 300px;
+#popperfect{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.main{
-    text-align: center;
-	padding: 10px;
+#popedge{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
-
-.below{
-    display: inline-block;
+#popsnow{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popspecial{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popdrunken{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#pophappiness{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popdr{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popmouse{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popmidnight{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popwitch{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popadult{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popdestiny{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popbest{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#poppig{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popmonstrous{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#pophouse{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popyumi{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popyear{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
+}
+#popseobok{
+    width:80%;
+    height:80%;
+    background:#3d3d3d;
+    color:#fff;
+    position:fixed;
+    top: 90px;
+    left: 140px;
 }
